# botnet-graph-analysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
botnet_c2/: exceptions.py
botnet_c2/data/: __init__.py  download.py  loader.py  registry.py
botnet_c2/features/: __init__.py  engineering.py  windows.py
botnet_c2/graph/: builder.py  topology.py
botnet_c2/models/: __init__.py  baseline.py  evaluation.py  explainability.py  trainer.py
notebooks/: 01_data_and_graphs.ipynb  02_eda.ipynb  03_features.ipynb  05_generalization.ipynb
scripts/: run_pipeline.py
tests/: conftest.py  test_builder.py  test_engineering.py  test_evaluation.py  test_loader.py  test_topology.py  test_windows.py
