[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "botnet-c2-detection"
version = "0.1.0"
description = "Graph-topology-based C2 node detection on CTU-13 botnet captures"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.3",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "requests>=2.32",
    "tqdm>=4.66",
    "powerlaw>=1.5",
    "lightgbm>=4.3",
    "scikit-learn>=1.5",
    "shap>=0.45",
    "dash>=2.17",
    "plotly>=5.22",
    "typer>=0.12",
    "numpy>=1.26",
]

[project.scripts]
c2detect = "scripts.run_pipeline:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "umap-learn>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["botnet_c2", "scripts"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501", # line too long — ruff format handles this
    "C408",  # dict() calls in notebooks — idiomatic Plotly style
]

[tool.ruff.lint.isort]
known-first-party = ["botnet_c2", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"